# issue_detector

tauri-issues-app/: README.md  package-lock.json  package.json
tauri-issues-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-issues-app/src-tauri/src/: lib.rs  main.rs
